# team_board_api

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: organizations.py  users.py
app/core/: validation.py
app/db/: session.py
app/models/: __init__.py  organization.py  organization_member.py  user.py
app/schemas/: organizations.py  users.py
app/services/: organizations.py  users.py
app/tests/: test_health.py  test_organizations_api.py  test_users_api.py  test_validation.py
docs/: architecture.md  data-model-decisions.md
docs/aws/: account-setup.md
migrations/: env.py
migrations/versions/: b90588d8981f_create_users_organizations_organization_.py
